# clingfun

./: Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy-pages.yml
site/: index.html
src/: main.rs
