[package]
name = "clingfun"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
log = "0.4"
web-time = "1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "HtmlCanvasElement", "Window"] }
